--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,6 @@ body{
     align-items: center;
 }
 
-video {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-  }
+canvas{
+    position: absolute;
+}
